--- a/prototype/static/guest.html
+++ b/prototype/static/guest.html
@@ -16,16 +16,16 @@
         <div class="col-lg-12 visible-lg-block">Large</div>
     </div>-->
     <div class="row">
-        <div class="col-xs-12 h3">
+        <div class="col-xs-12 h3 page-head">
             <img src="assets/images/icon-gear-48.png" class="nav-icon" align="right">
             <img src="assets/images/apple.png" class="logo-icon">CiderRef
         </div>
     </div>
     <div class="row">
-        <a href="" class="h4"><div class="col-md-12 nav-header">Calculators:</div></a>
+        <div class="col-md-12 h4 nav-header">Calculators:</div>
     </div>
     <div class="row">
-        <a href="" class="h4"><div class="col-md-12 nav-item">Hydrometer Correction</div></a>
+        <a href="hydrometerCorrection1of4.html" class="h4"><div class="col-md-12 nav-item">Hydrometer Correction</div></a>
     </div>
     <div class="row">
         <a href="" class="h4"><div class="col-md-12 nav-item">Sulphite Treatment</div></a>
@@ -37,10 +37,15 @@
         <a href="" class="h4"><div class="col-md-12 nav-item">Backsweetening</div></a>
     </div>
     <div class="row">
-        <a href="" class="h4"><div class="col-md-12 nav-header">Recipes:</div></a>
+        <div class="col-md-12 h4 nav-header">Recipes:</div>
     </div>
     <div class="row">
         <a href="" class="h4"><div class="col-md-12 nav-item">5% Sulphite Solution</div></a>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 footer margin-top-1">
+            <p>Copyright &copy; 2016 Michael Volk</p>
+        </div>
     </div>
 </div>
 </body>
