Render hydrometer correction prototype with React.

--- a/prototype/static/hydrometerCorrection1of4.html
+++ b/prototype/static/hydrometerCorrection1of4.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 h3 page-head">
-            <a href=""><img src="assets/images/icon-gear-48.png" class="nav-icon" align="right"></a>
+            <a href=""><img src="assets/images/icon-gear-48.png" class="settings-icon" align="right"></a>
             <a href="guest.html"><img src="assets/images/apple.png" class="logo-icon">CiderRef</a>
         </div>
     </div>
