--- a/prototype/static/guest.html
+++ b/prototype/static/guest.html
@@ -17,7 +17,7 @@
     </div>-->
     <div class="row">
         <div class="col-xs-12 h3 page-head">
-            <img src="assets/images/icon-gear-48.png" class="nav-icon" align="right">
+            <img src="assets/images/icon-gear-48.png" class="settings-icon" align="right">
             <img src="assets/images/apple.png" class="logo-icon">CiderRef
         </div>
     </div>
