Implement navigation interactions for hydrometer correction wizard prototype with React.
Includes parameterization of React components, dynamic one-page updates of hydrometer correction wizard and event handling for navigation event.s

--- a/prototype/static/guest.html
+++ b/prototype/static/guest.html
@@ -25,7 +25,7 @@
         <div class="col-md-12 h4 nav-header">Calculators:</div>
     </div>
     <div class="row">
-        <a href="hydrometerCorrection1of4.html" class="h4"><div class="col-md-12 nav-item">Hydrometer Correction</div></a>
+        <a href="hydrometerCorrection.html" class="h4"><div class="col-md-12 nav-item">Hydrometer Correction</div></a>
     </div>
     <div class="row">
         <a href="" class="h4"><div class="col-md-12 nav-item">Sulphite Treatment</div></a>
