--- a/prototype/index.html
+++ b/prototype/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>CiderRef - Hard Cider Made Easy</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="../../bower_components/bootstrap-css/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/prototype.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="css/prototype.css">
     </head>
     <body>
         <div class="container">
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-md-12" style="height: 300px;">
                     <h1 class="text-center">CiderRef</h1>
-                    <img src="assets/images/apple.png" width="125" height="125" style="margin-left: auto; margin-right: auto; display: block;">
+                    <img src="images/apple.png" width="125" height="125" style="margin-left: auto; margin-right: auto; display: block;">
                     <h4 class="text-center"><em>Hard cider made easy!</em></h4>
                 </div>
             </div>
